--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -45,8 +45,8 @@
   font-style: italic;
 }
 .drinks-card-wrapper {
+  width: 90%;
   margin: 1rem auto;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
